# OddOrEven

./: .gitattributes  LICENSE  README.md  pyproject.toml
src/: EOO.py  build.py
